Changelog
=========


1.0.3 (unreleased)
------------------

- Nothing changed yet.


1.0.2 (2015-10-28)
------------------

- Provide mimetype icons for solr flairs.
  [jone]


1.0.1 (2015-10-26)
------------------

- Remove duplicate icon in search results for files.
  [jone]


1.0.0 (2015-09-30)
------------------

- Initial implementation
  [jone]